--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,11 +33,27 @@ dependencies {
     annotationProcessor 'com.github.bumptech.glide:compiler:3.7.0'
     implementation 'com.github.ivbaranov:materialfavoritebutton:0.1.5'
     implementation 'com.google.code.gson:gson:2.8.5'
-    implementation 'com.facebook.android:facebook-android-sdk:[4,5)'
+    implementation 'com.facebook.android:facebook-android-sdk:4.38.1'
     implementation 'com.twitter.sdk.android:twitter:3.0.0'
     implementation 'com.github.thelester:Instagram-Helper:1.1.1'
     implementation 'de.hdodenhof:circleimageview:2.1.0'
+    implementation 'com.google.firebase:firebase-messaging:17.3.4'
+    implementation 'com.google.firebase:firebase-storage:16.0.4'
+    implementation 'com.google.firebase:firebase-auth:16.0.5'
+    implementation 'com.firebaseui:firebase-ui:0.6.0'
+    implementation 'com.google.firebase:firebase-database:16.0.4'
+    implementation 'com.baoyz.swipemenulistview:library:1.3.0'
+    implementation 'com.tubb.smrv:swipemenu-recyclerview:5.4.0'
+    implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.8'
+    implementation 'me.everything:overscroll-decor-android:1.0.4'
+    implementation 'com.google.android.gms:play-services-places:16.0.0'
+    implementation 'com.github.darsh2:MultipleImageSelect:v0.0.4'
 }
 
+repositories {
+    maven {
+        url "https://jitpack.io"
+    }
+}
 
 apply plugin: 'com.google.gms.google-services'
